# test-wasm-thread

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  spawn.js
web/: index.html
