[package]
name = "test-wasm-thread"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = { version = "0.2", default-features = false }
web-sys = { version = "0.3", features = [
  "Blob",
  "BlobPropertyBag",
  "console",
  "Url",
  "Worker",
] }
